phone input fix in desktop

--- a/src/pages/signup/_SignUp.scss
+++ b/src/pages/signup/_SignUp.scss
@@ -112,6 +112,11 @@
       .c-button {
         align-self: flex-end;
       }
+      .c-input {
+        &.phone-fix {
+          width: 300px;
+        }
+      }
     }
 
     &.role-container {
