header fixes job page changed other fixes

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -172,7 +172,7 @@ img {
     }
 
     &.xs {
-      width: 200px;
+      width: 150px;
 
     }
 
@@ -592,7 +592,7 @@ img {
 }
 
 .ant-form {
-  height: 400px;
+  height: auto;
 }
 
 
