--- a/src/uiComponents/CHeader/_Responsive.scss
+++ b/src/uiComponents/CHeader/_Responsive.scss
@@ -1,114 +1,116 @@
- @media screen and (max-width:1200px) {
-     .c-header {
-         .close-icon {
-             transition: .5s ease;
-             animation: mymove both .3s ease;
-             transform: rotate(95deg);
-         }
+@media screen and (max-width: 1200px) {
+  .c-header {
+    .close-icon {
+      transition: 0.5s ease;
+      animation: mymove both 0.3s ease;
+      transform: rotate(95deg);
+    }
 
-         .menu-icon {
-            transition: .5s ease;
-            animation: menuMove both .5s ease;
-         }
+    .menu-icon {
+      transition: 0.5s ease;
+      animation: menuMove both 0.5s ease;
+    }
 
-         @keyframes menuMove {
+    @keyframes menuMove {
+      from {
+        opacity: 0;
+        transform: translateX(100%);
+      }
 
-            from {
-                opacity: 0;
-                transform: translateX(100%);
-            }
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
 
-            to {
-                opacity: 1;
-                transform: translateX(0);
+    @keyframes mymove {
+      from {
+        transform: rotate(95deg);
+      }
 
-            }
+      to {
+        transform: rotate(0deg);
+      }
+    }
 
-        }
+    .menu {
+      display: none;
+    }
 
-         @keyframes mymove {
+    nav a.login {
+      display: none;
+    }
 
-             from {
-                 transform: rotate(95deg);
-             }
+    .mobile-menu {
+      position: fixed;
+      left: 0;
+      top: 64px;
+      background-color: #ffffff;
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      transform: translateX(-100%);
+      opacity: 0;
+      transition: 0.3s ease-in;
+      overflow-y: auto;
+      z-index: 999;
 
-             to {
-                 transform: rotate(0deg);
-             }
+      a {
+          
+        margin: 0 0 0 50px;
+        list-style: none;
+        font-family: $font-bold;
+        color: $text-color;
+        font-size: 24px;
+        padding: 15px 0;
+      }
 
-         }
+    }
 
-         .menu {
-             display: none;
-         }
+    .menu-open {
+      transform: translateX(0);
+      opacity: 1;
+    }
 
-         nav a.login {
-             display: none;
-         }
+    .links-wrapper {
+        width: 100%;
+        height: 100%;
+        min-height: 550px;
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+    }
+  }
+}
 
-         .mobile-menu {
-             position: fixed;
-             left: 0;
-             top: 64px;
-             background-color: #ffffff;
-             width: 100%;
-             height: 100vh;
-             display: flex;
-             flex-direction: column;
-             transform: translateX(-100%);
-             opacity: 0;
-             transition: .3s ease-in;
+@media screen and (max-width: 480px) {
+  .c-header {
+    .inner-container {
+      padding: 0 20px 0 20px;
+    }
 
-             a {
-                 margin: 0 0 0 50px;
-                 list-style: none;
-                 font-family: $font-bold;
-                 font-size: 24px;
-                 padding: 15px 0;
+    .logo {
+      max-width: 150px;
+      width: 100%;
+    }
 
-             }
-         }
+    .mobile-menu a {
+      margin: 0 0 0 20px;
+      font-size: 20px;
+    }
+  }
+}
 
-         .menu-open {
-             transform: translateX(0);
-             opacity: 1;
-         }
+@media screen and (min-width: 1200px) {
+  .c-header {
+    .toggle-button {
+      display: none;
+    }
 
-     }
+    .mobile-menu {
+      display: none;
+    }
+  }
+}
 
- }
-
- @media screen and (max-width:480px) {
-     .c-header {
-
-         .inner-container {
-             padding: 0 20px 0 20px;
-         }
-
-         .logo {
-             max-width: 150px;
-             width: 100%;
-         }
-
-         .mobile-menu a {
-             margin: 0 0 0 20px;
-         }
-
-     }
-
- }
-
-
-
- @media screen and (min-width:1200px) {
-     .c-header {
-         .toggle-button {
-             display: none;
-         }
-
-         .mobile-menu {
-             display: none;
-         }
-     }
-
- }
