--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -1,5 +1,6 @@
 @import "CHeader/CHeader";
 @import "CFooter/CFooter";
+@import "JobFilter/JobFilter";
 @import "shared/CButton/CButtons";
 @import "shared/CJobCard/CJobCard";
 @import "shared/CModal/CModal";
@@ -27,6 +28,8 @@
 
 @import "CFooter/Responsive";
 @import "CHeader/Responsive";
+@import "shared/CModal/Rsponsive";
+
 
 
 
