--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -1,6 +1,7 @@
 @import 'home/Home';
 @import 'pricing/Pricing';
 @import 'jobs/Jobs';
+@import 'findJobs/FindJobs';
 @import 'login/Login';
 @import 'employerAndAgencies/EmployerAndAgencies';
 @import 'jobSeekers/JobSeekers';
