--- a/src/pages/signup/_SignUp.scss
+++ b/src/pages/signup/_SignUp.scss
@@ -125,6 +125,7 @@
         align-self: flex-end;
       }
       .c-input {
+        width: 300px;
         &.phone-fix {
           width: 300px;
         }
