--- a/src/pages/login/_Login.scss
+++ b/src/pages/login/_Login.scss
@@ -1,37 +1,43 @@
-.login-container{
-        .user-type {
-                width: 100%;
-                display: flex;
-                justify-content: space-between;
-                span{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    flex:1;
-                    padding: 12px 0px 12px 0px;
-                    cursor: pointer;
-                    font-family: $font-medium !important;
-                    box-shadow: 2px 3px 5px #00000026;
-                    color: $text-color;
-                    &.active{
-                        background-color: $primary;
-                        color:$white
-                    }
-                }
-
-            }
+.login-container {
+  .user-type {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      padding: 12px 0px 12px 0px;
+      cursor: pointer;
+      font-family: $font-medium !important;
+      box-shadow: 2px 3px 5px #00000026;
+      color: $text-color;
+      &.active {
+        background-color: $primary;
+        color: $white;
+      }
+    }
+  }
+  .first-container {
+    position: relative;
+    .login-background-image {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      object-fit: cover;
+      z-index: -20;
+    }
+  }
 }
 
-.auth-wrapper{
-    background: url('../../assets/images/auth/auth-back.jpg');
-    background-position: center;
-    background-size: cover;
-    min-height: calc(100vh - 100px);
-    padding: 25px 0px;
-}  
+.auth-wrapper {
+  min-height: calc(100vh - 100px);
+  padding: 25px 0px;
+}
 
 @media only screen and (max-width: 991px) {
-    .auth-wrapper{
-        padding: 25px 5px;
-    }
+  .auth-wrapper {
+    padding: 25px 5px;
+  }
 }
