--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -26,7 +26,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 0px !important;
-    height: 650px;
+    height: 720px;
     position: relative;
     overflow: hidden;
     box-shadow: 0 0 16px #00000026;
@@ -103,6 +103,7 @@
             font-size: $font-size-md;
             text-decoration: none;
             color: $white;
+            margin-bottom: 3px;
           }
 
           p {
@@ -124,7 +125,7 @@
     .second-container {
       max-width: 740px;
       width: 100%;
-      padding: 50px 50px 50px 50px;
+      padding: 0 50px;
       max-width: inherit;
 
       .c-button {
