--- a/src/features/login/_Login.scss
+++ b/src/features/login/_Login.scss
@@ -31,11 +31,28 @@
       z-index: -20;
     }
   }
+  .second-container {
+    .login-form {
+      align-items: center;
+      label {
+        align-self: flex-start;
+      }
+      .form-title {
+        text-align: center;
+      }
+    }
+  }
 }
 
 .auth-wrapper {
   min-height: calc(100vh - 100px);
   padding: 25px 0px;
+}
+
+.ant-alert {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 @media only screen and (max-width: 991px) {
