--- a/src/app-ui/JobFilter/_JobFilter.scss
+++ b/src/app-ui/JobFilter/_JobFilter.scss
@@ -78,14 +78,14 @@
             margin: 0 auto;
         }
 
-        .ant-select {
-            width: 280px !important;
-            margin: 0 0 20px 0;
-
-        }
+        // .ant-select {
+        //     // width: 280px !important;
+        //     margin: 0 0 20px 0;
+        // }
 
         .ant-slider {
             margin: 0 5px;
+            width: 290px;
         }
 
         .ant-slider-handle {
