--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,6 +9,8 @@ $purple: #6c5984;
 $light-purple: #cb6ce6;
 $brown: #f8b041;
 $border-color: rgba(0, 0, 0, 0.05);
+$theme-border:solid 1px rgba($color:$primary, $alpha: 0.2);
+$theme-shadow:0 0 0 1px rgba($color:$primary, $alpha: 0.4);
 //font families
 $font-bold: "Gordita-Regular";
 $font-light: "Gordita-Light";
