do the same in candidates

--- a/src/app-ui/_index.scss
+++ b/src/app-ui/_index.scss
@@ -1,6 +1,8 @@
 @import "Header/Header";
 @import "Footer/Footer";
 @import "JobFilter/JobFilter";
+@import "JobDetails/JobDetails";
+@import "JobFilter/JobFilter";
 
 @import "../shared-ui/Button/Buttons";
 @import "../shared-ui/JobCard/JobCard";
