--- a/src/app-ui/JobFilter/_JobFilter.scss
+++ b/src/app-ui/JobFilter/_JobFilter.scss
@@ -66,7 +66,15 @@
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
+            justify-content: center;
+            .ant-form-item{
+                margin-bottom: 1px;
+                align-items: center;
+                label{
+                    margin-bottom: 0px;
+                }
+            }
 
         }
 
