--- a/src/shared-ui/JobCard/_JobCard.scss
+++ b/src/shared-ui/JobCard/_JobCard.scss
@@ -9,7 +9,7 @@
   margin: 0px 0px 15px 0px;
   justify-content: space-between;
   overflow: hidden;
-  padding: 10px 10px;
+  padding: 26px 10px 10px 10px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3) !important;
   transition: 0.3s all linear;
   cursor: pointer;
@@ -25,8 +25,8 @@
     align-items: center;
 
     .job-thumbnail {
-      max-width: 80px;
-      max-height: 80px;
+      max-width: 70px;
+      max-height: 70px;
       border-radius: 5px;
       margin: 0px 10px 0px 0px;
       padding: 5px;
@@ -99,6 +99,9 @@
     display: flex;
     flex: 1;
     width: 100%;
+    height: 30px !important;
+    min-height: 20px;
+    overflow: hidden;
     padding: 10px 10px;
 
     p {
@@ -107,16 +110,13 @@
   }
 
   .details-container-box {
-    display: flex;
-    flex: 1;
+    // display: flex;
+    // flex: 1;
     width: 100%;
-    padding: 10px 0 0 0;
+    padding: 10px 0;
 
     p {
       text-align: left;
-    }
-    .title {
-      font-size: $font-size-md;
     }
   }
 
@@ -127,6 +127,9 @@
     right: 0;
     align-items: flex-start;
 
+    .jobcard-checkbox-mobile {
+      display: none !important;
+    }
     .featured-tag {
       position: relative;
       top: -6px;
@@ -180,11 +183,11 @@
   }
 
   &.box {
-    height: 220px;
-    width: 220px;
+    height: 200px;
+    width: 200px;
     flex-direction: column;
     align-items: flex-start;
-    padding: 1em;
+    padding: 20px 15px 5px 15px;
 
     .info-wrapper {
       flex-direction: column;
@@ -198,6 +201,7 @@
         flex-direction: column;
         justify-content: space-around;
         height: 90px;
+        margin: 10px 0px 0px 0px;
 
         .title-row {
           flex-direction: column;
