--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -12,9 +12,10 @@ $border-color: rgba(0, 0, 0, 0.05);
 $theme-border:solid 1px rgba($color:$primary, $alpha: 0.2);
 $theme-shadow:0 0 0 1px rgba($color:$primary, $alpha: 0.4);
 //font families
-$font-bold: "Gordita-Regular";
+$font-bold: "Gordita-Bold";
 $font-light: "Gordita-Light";
-$font-medium: "Gordita-Medium";
+$font-medium: "Gordita-Regular";
+$font-subtitle: "Gordita-Medium";
 
 //font-sizes
 $font-size-x-lg: 40px;
