style fixes and cleanup

--- a/src/features/jobs/_Jobs.scss
+++ b/src/features/jobs/_Jobs.scss
@@ -126,6 +126,12 @@
         width: 100%;
         margin: 0 8px;
       }
+      .filter-icon {
+        width: 40px;
+      }
+    }
+    .ant-input-prefix {
+      margin-right: 0;
     }
   }
 }
