--- a/src/features/login/_Responsive.scss
+++ b/src/features/login/_Responsive.scss
@@ -12,4 +12,13 @@
   .c-form {
     padding: 0 5px;
   }
+  .c-card-container {
+    .first-container {
+    }
+    .second-container {
+      .login-form {
+        padding: 0 14px;
+      }
+    }
+  }
 }
