--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -93,7 +93,7 @@ img {
   }
 
   img {
-    max-width: 800px;
+    max-width: 900px;
   }
 }
 
@@ -265,7 +265,10 @@ p {
   width: auto;
 
   .ant-input-suffix {
-    display: none;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    // display: none;
   }
 }
 
@@ -304,7 +307,7 @@ p {
   &:focus {
     border: none;
     box-shadow: none;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3) !important;
+    // box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3) !important;
   }
 }
 
@@ -401,7 +404,6 @@ p {
   .ant-picker-xs {
     width: 100px;
   }
-
 }
 
 // custom phone number input
@@ -454,7 +456,7 @@ p {
 
 // custom card container
 .c-card-container {
-  max-width: 800px;
+  max-width: 900px;
   width: 100%;
   height: 720px;
   border-radius: 20px;
@@ -488,11 +490,14 @@ p {
       color: $white;
       font-family: $font-bold;
     }
+    .login-background-image {
+      width: 100%;
+    }
   }
 
   .second-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     max-width: 100% !important;
@@ -503,7 +508,6 @@ p {
     }
   }
 }
-
 
 // custom form
 .c-form {
@@ -516,7 +520,10 @@ p {
   .form-title {
     font-family: $font-bold;
     font-size: $font-size-lg;
-    margin-bottom: 15px;
+    margin-bottom: 28px;
+  }
+  .ant-radio-group {
+    margin-bottom: 18px;
   }
 
   label {
@@ -560,10 +567,7 @@ p {
   height: 3px;
 }
 
-.ant-steps-item-finish
-  > .ant-steps-item-container
-  > .ant-steps-item-content
-  > .ant-steps-item-title::after {
+.ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title::after {
   background-color: $green;
 }
 
@@ -769,4 +773,20 @@ p {
     width: 100%;
     height: 32px;
   }
+}
+// select placeholder
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector::after,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector
+  .ant-select-selection-placeholder {
+  line-height: 34.4px;
+}
+
+img {
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor;
 }
