--- a/src/features/pricing/_Pricing.scss
+++ b/src/features/pricing/_Pricing.scss
@@ -37,6 +37,7 @@
         & .pricing-card {
           width: 100%;
           border-left: 1px solid $border-color;
+          min-height: 500px;
           height: 100%;
 
           &:first-child {
@@ -88,50 +89,120 @@
       padding: 0 20px;
 
       & .image-section {
+        display: flex;
+        justify-content: center;
         & img {
-          width: 80%;
-          margin: -30px 0 0 0;
+          width: 100%;
+          max-width: 360px;
           min-width: 290px;
+          max-height: 500px;
+          object-fit: cover;
+          border-radius: 15px;
         }
       }
     }
   }
 
-  .pricing-page {
-    .section-2 {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: center;
-      padding: 50px 0 !important;
+  .pricing-details {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding-top: 60px;
 
-      .left-side {
-        left: 50px;
-        flex: 1;
-        display: flex;
-        flex-direction: column;
+    .video-section {
+      width: 50%;
 
-        .title {
-          font-size: $font-size-lg;
-          font-family: $font-bold;
-        }
+      img {
+        width: 100%;
+      }
+    }
+    .buy-premuim {
+      width: 50%;
 
-        .description {
-          font-size: $font-size-md;
+      .desc {
+        font-size: $font-size-x-lg;
+        max-width: 650px;
+        line-height: 60px;
+        margin: 0 0 30px;
+
+        span {
+          color: $blue;
+          font-size: $font-size-x-lg;
         }
       }
+      .premium-heading {
+        font-size: $font-size-lg;
+      }
+      .points {
+        margin: 0;
+        margin-bottom: 2px;
+        font-size: $font-size-sm;
+      }
+      .btn-sec {
+        display: flex;
+        align-items: center;
+        margin: 20px 0 0 0;
 
-      .right-side {
-        position: relative;
-        flex: 2;
-        min-width: 340px;
-
-        .slider-btn {
-          position: absolute;
-          width: 300px;
-          bottom: 87px;
-          left: 157px;
+        p {
+          font-size: $font-size-sm;
+          margin: 0 0 0 10px;
         }
+      }
+      .direct-message {
+        font-size: $font-size-x-sm;
+      }
+    }
+  }
+  .interview {
+    display: flex;
+    align-items: center;
+    padding-top: 60px;
+
+    .interview-details {
+      width: 30%;
+
+      .coming-soon {
+        font-size: $font-size-x-lg;
+        color: $blue;
+        text-transform: uppercase;
+      }
+      .make-interview {
+        font-size: $font-size-lg;
+      }
+    }
+
+    .interview-image {
+      width: 70%;
+
+      img {
+        width: 100%;
+        max-width: 800px;
+      }
+    }
+    p {
+      max-width: 500px;
+    }
+    .points {
+      display: flex;
+      align-items: center;
+      margin: 15px 0;
+
+      .checks {
+        width: 27px;
+        height: 27px;
+        border-radius: 89px;
+        background-color: $green;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        font-size: 20px;
+        min-width: 27px;
+        min-height: 27px;
+      }
+      p {
+        margin: 0 0 0 10px;
+        max-width: unset;
       }
     }
   }
